<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kata.pranitha.pathoflowestcost.MainActivity">

    <EditText
        android:id="@+id/path_input"
        android:layout_above="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/path_hint"
        android:gravity="top|left"
        android:padding="@dimen/activity_button_padding"
        android:digits="0123456789- \n"
        android:background="@drawable/edittext_border"
        android:layout_margin="@dimen/activity_button_padding"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:layout_margin="@dimen/activity_button_padding"
        android:background="@drawable/button_background"
        android:padding="@dimen/activity_button_padding"/>
</RelativeLayout>
